--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -9,11 +9,10 @@
 <td>{{to-date petition.task_end_date}}</td>
 <td>{{petition.status}}</td>
 <td class="icon-cell">
+	{{#if (eq petition.status 1)}}
     {{#paper-button type="submit" raised=true onClick=(transition-to "userPetition" petition.petition_id) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
-</td>
-<td class="icon-cell">
     {{#paper-button type="submit" raised=true onClick=(action "del" petition.petition_id petition.status) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
-</td>
-<td class="icon-cell">
-    {{#paper-button type="submit" raised=true onClick=(action "petitionUndo" petition.petition_id) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}
+  {{else if (eq petition.status 2)}}
+  	{{#paper-button type="submit" raised=true onClick=(action "petitionUndo" petition.petition_id) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}   
+  {{/if}}
 </td>
