--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -13,7 +13,7 @@
           <th>Ημ/νία Αναχώρησης</th>
           <th>Ημ/νία Επιστροφής</th>
           <th>Κατάσταση</th>
-          <th class="link-tab" colspan="3">{{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}</th>
+          <th class="link-tab">{{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}</th>
         </tr>
     </thead>
     <tbody>
