--- a/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
@@ -9,5 +9,6 @@
     minLength=(if fattrs.minLength fattrs.minLength 0)
     allowNonExisting=(if fattrs.allowNonExisting fattrs.allowNonExisting false)
     disabled=fattrs.disabled
+    readonly=fattrs.readonly
     errors=errors
 }}
