Checkbox input component for boolean model fields

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -168,4 +168,8 @@ md-input-container.md-input-invalid {
   md-select.md-default-theme .md-select-value.md-select-placeholder {
     color: lighten(#f00, 30%);
   }
+
+  .checkbox-container {
+    padding-left: 0.8rem;
+  }
 }
