Properly set error class to select field component

--- a/travelsFront/app/templates/components/model-form/fields/select.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/select.hbs
@@ -5,7 +5,7 @@
     label=label
     placeholder=label
 
-    classNames=fattrs.class
+    class=selectClassNames
 
     getItems=getChoicesCBPromise
     itemLabelCallback=getChoiceLabel
