Fix model-form error handling
handle exception raised for no validation errors
custom color for error fields placeholders

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -140,6 +140,14 @@ md-content.md-form-success {
 }
 
 
+md-input-container.md-input-invalid {
+  label:not(.md-no-float):not(.md-container-ignore), 
+  .md-placeholder,
+  md-select .md-select-value.md-select-placeholder,
+  md-select.md-default-theme .md-select-value.md-select-placeholder {
+    color: lighten(#f00, 30%);
+  }
+}
 // overrides
 md-input-container 
   label:not(.md-no-float):not(.md-container-ignore), 
