Use partial in order to be aligned with DRY

--- a/travelsFront/app/templates/advanced-list.hbs
+++ b/travelsFront/app/templates/advanced-list.hbs
@@ -1,45 +1,1 @@
-{{page-toolbar pageTitle="Petition List"}}
-
-{{#if (can "approve petition")}}
-	<div>
-		<table class="table" > 
-			<thead>
-				<tr>
-					<th>ΔΣΕ</th>
-					<th>Όνομα</th>
-					<th>Επώνυμο</th>
-					<th>Έργο</th>
-					<th>Προορισμός</th>
-					<th>Ημ/νια Δημιουργίας</th>
-					<th>Τελευταία ανανέωση</th>
-					<th>Ημ/νία Αναχώρησης</th>
-					<th>Ημ/νία Επιστροφής</th>
-					<th>Κατάσταση</th>
-					<th class="link-tab" colspan="3">{{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}</th>
-				</tr>
-			</thead>
-			
-			<tbody>
-				{{#each model as |petition|}}
-						{{petition-listing petition=petition}}
-				{{/each}}
-			</tbody>
-		</table>
-<!-- Message Modal-->
-		<!-- <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header" id="styleModal">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel"><font>{{deleteMessage}}</font></h4>
-					</div>
-				</div>
-			</div>
-		</div> -->
-
-	</div>
-{{else}}
-	We are sorry but you don't have permmission to view this page...
-{{/if}}
-
-{{outlet}}
+{{partial 'petition-list'}}
