Some fixes on the appearence of the petition list
We changed our "if condition" in order to be based on the user's afm,
for a more stable solution.

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -1,5 +1,5 @@
 {{#if (can "see petition")}}
-	{{#if (eq petition.first_name account.user.first_name)}}
+	{{#if (eq petition.afm account.user.afm)}}
 		<td>{{petition.dse}}</td>
 		<td>{{petition.first_name}}</td>
 		<td>{{petition.last_name}}</td>
