--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -1,5 +1,5 @@
 {{#if (can "see petition")}}
-	{{#if (eq petition.afm account.user.afm)}}
+	{{#if (eq petition.tax_reg_num account.user.tax_reg_num)}}
 		<td>{{petition.dse}}</td>
 		<td>{{petition.first_name}}</td>
 		<td>{{petition.last_name}}</td>
