Add i18n to submit button

--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -11,7 +11,7 @@
                 warn=true
                 raised=true
                 disabled=modelform.inProgress
-            }}SUBMIT{{/paper-button}}
+            }}{{t 'submit'}}{{/paper-button}}
         {{/ form.controls}}
     {{/ model-form/form }}
 {{/paper-content}}
