model-form I18N improvements
- use `<field-key>.label` as the default i18n key for field label
- translate fieldset label/help-text
- translate field hints

--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -4,7 +4,7 @@
   field=field
   onChange=(action 'updateProperty')
   value=value
-  label=label
+  label=(t labelI18NKey)
   errors=errors
   isTouched=(readonly isTouched)
   object=object
@@ -13,7 +13,7 @@
 {{#if canShowHint }}
   <div class="md-input-hint">
     <div class="message">
-        {{ hint }}
+        {{t hint }}
     </div>
   </div>
 {{/if}}
