--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,4 +1,4 @@
-{{ page-toolbar pageTitle="Profile" }}
+{{ page-toolbar pageTitle=(t "profile") }}
 {{#paper-content }}
     {{ model-form/form model }}
 {{/paper-content}}
