--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -1,4 +1,9 @@
-{{ page-toolbar pageTitle=(if newPetition "Create a petition" "Edit petition") }}
+{{#if newPetition}}
+    {{ page-toolbar pageTitle=(t "create") }}
+{{else}}
+    {{ page-toolbar pageTitle=(t "edit") }}    
+{{/if}}
+
 
 {{#paper-content classNames="md-padding"}}
     {{# model-form/form model registerForm=this getModelForSave=getModelForSave successMessage="Petition saved" 
