Minor fixes in translation of buttons

--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -16,7 +16,7 @@
                 warn=true
                 raised=true
                 disabled=modelform.inProgress
-            }}{{t 'submit'}}{{/paper-button}}
+            }}{{t 'b_submit'}}{{/paper-button}}
         {{/ form.controls}}
     {{/ model-form/form }}
 {{/paper-content}}
