--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -1,4 +1,4 @@
 {{ page-toolbar pageTitle=(t "login") }}
 {{#paper-content}}
-    {{model-form/form model ui='login' submit=(action 'authenticate') submitError=(mut submitError) hideReset=true submitLabel=(t "form_button_login")}}
+    {{model-form/form model ui='login' submit=(action 'authenticate') submitError=(mut submitError) hideReset=true submitLabel=(t "form.button.login")}}
 {{/paper-content}}
