--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -1,4 +1,4 @@
-{{page-toolbar pageTitle=(t "petition_list")}}
+{{page-toolbar pageTitle=(t "petition_list.title")}}
 
 <table class="table"> 
     <thead>
