--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -1,7 +1,7 @@
 {{#if newPetition}}
-    {{ page-toolbar pageTitle=(t "petition_create") }}
+    {{ page-toolbar pageTitle=(t "petition_create.title") }}
 {{else}}
-    {{ page-toolbar pageTitle=(t "petition_edit") }}    
+    {{ page-toolbar pageTitle=(t "petition_edit.title") }}    
 {{/if}}
 
 
