Fix minor bug in page-toolbar subexpression

--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -1,4 +1,4 @@
-{{ page-toolbar (if newPetition pageTitle=(t "petition_create.title") (t "petition_edit.title")) }}
+{{ page-toolbar pageTitle=(if newPetition (t "petition_create.title") (t "petition_edit.title")) }}
 
 {{#paper-content classNames="md-padding"}}
     {{# model-form/form model registerForm=this getModelForSave=getModelForSave successMessage="Petition saved" 
