Show secretary petition
In this commit we can see the firt version of the petition that should be filled by the secretary. Fixes will follow that will give to it its final appearence.

--- a/travelsFront/app/templates/secretary-petition.hbs
+++ b/travelsFront/app/templates/secretary-petition.hbs
@@ -1,1 +1,17 @@
-{{outlet}}
+{{ page-toolbar pageTitle=(t "petition_edit.title") }}
+
+{{#paper-content classNames="md-padding"}}
+    {{# model-form/form model registerForm=this getModelForSave=getModelForSave successMessage="Petition saved" 
+            onError=(action 'onError') onSuccess=(action 'onSuccess') as |form| }}
+        {{ form.messages }}
+        {{ form.fields }}
+        {{# form.controls }}
+            {{#paper-button 
+                onClick=(action "handleSubmit")
+                warn=true
+                raised=true
+                disabled=modelform.inProgress
+            }}{{t 'form.button.submit'}}{{/paper-button}}
+        {{/ form.controls}}
+    {{/ model-form/form }}
+{{/paper-content}}
