city autocomplete improvements
- use custom label attribute to display each city country name
- use custom filterArray method which searches against slugified texts
  for improved user experience

--- a/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
@@ -1,6 +1,7 @@
 {{ paper-autocomplete 
     source=choices
-    lookupKey=(if fattrs.labelKey fattrs.labelKey 'label')
+    lookupKey='label'
+    filterArray=filterArray
     model=choiceModel
     value=value
     floating=true
