--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -143,6 +143,15 @@ md-content.md-form-success {
 // overrides
 md-input-container 
   label:not(.md-no-float):not(.md-container-ignore), 
-  md-input-container .md-placeholder {
+  md-input-container .md-placeholder,
+  md-select .md-select-value.md-select-placeholder,
+  md-select.md-default-theme .md-select-value.md-select-placeholder,
+  {
   color: lighten(#3f51b5, 30%);  
+}
+
+md-input-container[disabled]
+  label:not(.md-no-float):not(.md-container-ignore), 
+  md-input-container[disabled] .md-placeholder {
+  color: #bbb;  
 }
