Propagate petition travel info errors to the related petition fields

--- a/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
@@ -11,5 +11,6 @@
     allowNonExisting=(if fattrs.allowNonExisting fattrs.allowNonExisting false)
     disabled=fattrs.disabled
     readonly=fattrs.readonly
+    isTouched=isTouched
     errors=errors
 }}
