--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -1,6 +1,7 @@
 {{page-toolbar pageTitle=(t "petition_list.title")}}
 
-<table class="table"> 
+<div class="container">
+<table class="table responsive"> 
     <thead>
         <tr>
           <th>ΔΣΕ</th> 
@@ -17,10 +18,11 @@
         </tr>
     </thead>
     <tbody>
-        {{#each model as |petition|}}
+        {{#each sortedModel as |petition|}}
           {{#if petition.project.name}}
             {{petition-listing petition=petition del="petitionDelete" edit="petitionEdit" undo="petitionUndo"}}
           {{/if}}
         {{/each}}
     </tbody>
 </table>
+</div>
