--- a/travelsFront/app/templates/components/model-form/fields/select.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/select.hbs
@@ -38,6 +38,7 @@
     textarea=fattrs.textarea
     rows=fattrs.rows
     columns=fattrs.columns
+    icon=(if fattrs.disabled 'lock' null)
 
     as |options|}}
 
