--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -4,13 +4,13 @@
 body, body div.app, body div.app > div { height: 100%; }
 
 md-content.login-info {
-  background-color: #BDBEF1;
+  background-color: color('grey', '500');
   padding: 16px;
   border-bottom: 1px solid color($background, '400');
   margin-bottom: 8px;
   color: white;
   md-content.user-label {
-    padding: 20px 16px 20px 0;
+    padding: 14px 16px 14px 0;
     background-color: transparent;
     color: white;
   }
@@ -55,8 +55,13 @@ table {
     opacity: 0.9;
 }
 
+md-toolbar.site-content-toolbar {
+  background-color: color('grey', '800') !important;
+}
+
 .logo {
-    background: url('images/grnet_logo.png') no-repeat 10px 10px;
+    padding-left: 101px;
+    background: url('images/grnet_logo.png') no-repeat 45px 45px;
     background-size: 100px;
     a {
         color: inherit;
