--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -11,15 +11,16 @@
 <td class="icon-cell">
 {{#if (can "approve petition")}}
 	{{#if (lte petition.status 3)}}
-    {{#paper-button type="submit" raised=true onClick=(action "edit" petition.petition_id petition.status) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
-    {{#paper-button type="submit" raised=true onClick=(action "del" petition.petition_id petition.status) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
+    {{#paper-button type="submit" raised=true onClick=(action "edit" petition) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
+    {{#paper-button type="submit" raised=true onClick=(action "del" petition) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
+  	{{#paper-button type="submit" raised=true onClick=(action "undo" petition) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}   
   {{else if (eq petition.status 4)}}
   	{{#paper-button type="submit" raised=true onClick=(action "undo" petition) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}   
   {{/if}}
 {{else}}
 	{{#if (eq petition.status 1)}}
-    {{#paper-button type="submit" raised=true onClick=(action "edit" petition.petition_id petition.status) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
-    {{#paper-button type="submit" raised=true onClick=(action "del" petition.petition_id petition.status) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
+    {{#paper-button type="submit" raised=true onClick=(action "edit" petition) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
+    {{#paper-button type="submit" raised=true onClick=(action "del" petition) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
   {{else if (eq petition.status 2)}}
   	{{#paper-button type="submit" raised=true onClick=(action "undo" petition) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}   
   {{/if}}
