--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -11,18 +11,18 @@
 <td class="icon-cell">
 {{#if (can "approve petition")}}
 	{{#if (lte petition.status 3)}}
-    {{#paper-button type="submit" raised=true onClick=(action "edit" petition) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
-    {{#paper-button type="submit" raised=true onClick=(action "del" petition) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
-  	{{#paper-button type="submit" raised=true onClick=(action "undo" petition) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}   
+    {{list-action action=(action "edit" petition) icon='pencil' confirm=false}}
+    {{list-action action=(action "del" petition) icon='trash-o' confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' confirm=true}}
   {{else if (eq petition.status 4)}}
-  	{{#paper-button type="submit" raised=true onClick=(action "undo" petition) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}   
+    {{list-action action=(action "undo" petition) icon='undo' confirm=true}}
   {{/if}}
 {{else}}
 	{{#if (eq petition.status 1)}}
-    {{#paper-button type="submit" raised=true onClick=(action "edit" petition) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
-    {{#paper-button type="submit" raised=true onClick=(action "del" petition) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
+    {{list-action action=(action "edit" petition) icon='pencil' confirm=false}}
+    {{list-action action=(action "del" petition) icon='trash-o' confirm=true}}
   {{else if (eq petition.status 2)}}
-  	{{#paper-button type="submit" raised=true onClick=(action "undo" petition) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}   
+    {{list-action action=(action "undo" petition) icon='undo' confirm=true}}
   {{/if}}
 {{/if}}  
 </td>
