--- a/travelsFront/app/templates/components/model-form/fields/input.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/input.hbs
@@ -12,5 +12,5 @@
     autofocus=fattrs.autofocus
     disabled=fattrs.disabled
     passThru=fattrs
-    icon=(if fattrs.disabled 'lock' null)
+    icon=(if fattrs.disabled 'lock' (if fattrs.icon fattrs.icon null))    
 }}
