Change list-action button style
Make list-action button more generic so it can be used for simple buttons
and for icon buttons.

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -11,17 +11,17 @@
 <td class="icon-cell">
 {{#if (can "approve petition")}}
 	{{#if (lte petition.status 3)}}
-    {{list-action action=(action "edit" petition) icon='pencil' confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' confirm=true}}
+    {{list-action action=(action "edit" petition) icon='pencil' iconButton=true confirm=false}}
+    {{list-action action=(action "del" petition) icon='trash-o' iconButton=true confirm=true}}
   {{else if (eq petition.status 4)}}
-    {{list-action action=(action "undo" petition) icon='undo' confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' iconButton=true confirm=true}}
   {{/if}}
 {{else}}
 	{{#if (eq petition.status 1)}}
-    {{list-action action=(action "edit" petition) icon='pencil' confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' confirm=true}}
+    {{list-action action=(action "edit" petition) icon='pencil' iconButton= true confirm=false}}
+    {{list-action action=(action "del" petition) icon='trash-o' iconButton=true confirm=true}}
   {{else if (eq petition.status 2)}}
-    {{list-action action=(action "undo" petition) icon='undo' confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' iconButton=true confirm=true}}
   {{/if}}
 {{/if}}  
 </td>
