--- a/travelsFront/app/templates/components/list-action.hbs
+++ b/travelsFront/app/templates/components/list-action.hbs
@@ -1,1 +1,5 @@
-{{#paper-button type="submit" raised=true onClick=(action "handleClick") iconButton=true}}{{fa-icon icon}}{{/paper-button}}
+{{#if iconButton}}
+	{{#paper-button type="submit" raised=true onClick=(action "handleClick") iconButton=iconButton }}{{fa-icon icon}}{{/paper-button}}
+{{else}}
+	{{#paper-button type="submit" raised=true onClick=(action "handleClick") iconButton=iconButton }}{{value}}{{/paper-button}}
+{{/if}}
