Add a condition so the list can show compensations

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -17,7 +17,7 @@
     {{list-action action=(action "undo" petition) icon='undo' iconButton=true confirm=true}}
   {{/if}}
 {{else}}
-	{{#if (eq petition.status 1)}}
+	{{#if (or (eq petition.status 1) (eq petition.status 4))}}
     {{list-action action=(action "edit" petition) icon='pencil' iconButton= true confirm=false}}
     {{list-action action=(action "del" petition) icon='trash-o' iconButton=true confirm=true}}
   {{else if (eq petition.status 2)}}
