Roll back button logic
The use of list-action component for submission introduces a bug:
redirects the user to the editPtition route instead of submiting
it's petition.
Untill we find a solution to this we will use the older approach.

--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -6,12 +6,12 @@
         {{ form.messages }}
         {{ form.fields }}
         {{# form.controls }}
-            {{list-action 
-                action=(action "handleSubmit")
-                disabled=modelform.inProgress
-                confirm=true
-                value=(t 'form.button.submit')
-            }}
+        {{#paper-button
+          onClick=(action "handleSubmit")
+          warn=true
+          raised=true
+          disabled=modelform.inProgress
+        }}{{t 'form.button.submit'}}{{/paper-button}}
         {{/ form.controls}}
     {{/ model-form/form }}
 {{/paper-content}}
