--- a/travelsFront/app/templates/user-compensation.hbs
+++ b/travelsFront/app/templates/user-compensation.hbs
@@ -1,7 +1,7 @@
 {{ page-toolbar pageTitle= (t "petition_edit.title") }}
 
 {{#paper-content classNames="md-padding"}}
-    {{# model-form/form model registerForm=this getModelForSave=getModelForSave successMessage="Petition saved" 
+    {{# model-form/form model registerForm=this successMessage="Petition saved"
             onError=(action 'onError') onSuccess=(action 'onSuccess') as |form| }}
         {{ form.messages }}
         {{ form.fields }}
